--- a/application/templates/website/login.html
+++ b/application/templates/website/login.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login</h1>
-    {% if error_message %}
-    <p style="color: red;">{{ error_message }}</p>
-    {% endif %}
+{% extends 'base.html' %}
+
+{% block title %}Login - My Web Application{% endblock %}
+
+{% block content %}
+    <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" autofocus><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
-</body>
-</html>
+    {% if error_message %}
+        <p>An error occurred: {{ error_message }}</p>
+    {% endif %}
+{% endblock %}
