--- a/application/templates/website/register.html
+++ b/application/templates/website/register.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Register - My Web Application{% endblock %}
+
+{% block content %}
     <h2>Register</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Register</button>
     </form>
-    <a href="{% url 'login' %}">Login</a>
-</body>
-</html>
+{% endblock %}
