--- a/application/templates/website/dashboard.html
+++ b/application/templates/website/dashboard.html
@@ -3,6 +3,6 @@
 {% block title %}Dashboard - My Web Application{% endblock %}
 
 {% block content %}
-    <h2>Welcome, {{ user.username }}!</h2>
+    <h2>Welcome, {{ user.full_name }}!</h2>
     <p>This is your dashboard.</p>
 {% endblock %}
