--- a/application/templates/website/login.html
+++ b/application/templates/website/login.html
@@ -3,16 +3,30 @@
 {% block title %}Login - My Web Application{% endblock %}
 
 {% block content %}
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
-    </form>
-    {% if error_message %}
-        <p>An error occurred: {{ error_message }}</p>
-    {% endif %}
+<div class="container">
+    <div class="box">
+        <div class="form">
+            <div class="form-header">
+                <h2>Login</h2>
+            </div>
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+{% if error_message %}
+    <p>An error occurred: {{ error_message }}</p>
+{% endif %}
 {% endblock %}
