--- a/application/templates/website/register.html
+++ b/application/templates/website/register.html
@@ -3,10 +3,20 @@
 {% block title %}Register - My Web Application{% endblock %}
 
 {% block content %}
-    <h2>Register</h2>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
-    </form>
+<div class="container">
+    <div class="box">
+        <div class="form">
+            <div class="form-header">
+                <h2>Register</h2>
+            </div>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.as_p }}
+                </div>
+                <button type="submit">Register</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
