--- a/application/templates/website/base.html
+++ b/application/templates/website/base.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Web Application{% endblock %}</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    {% block styles %}{% endblock %}
 </head>
 <body>
+    <!--
     <header>
-        <h1>Web Application</h1>
         <nav>
             <ul>
                 {% if user.is_authenticated %}
@@ -22,6 +21,7 @@
             </ul>
         </nav>
     </header>
+    -->
     <main>
         {% block content %}
         {% endblock %}
