--- a/application/templates/website/dashboard.html
+++ b/application/templates/website/dashboard.html
@@ -2,6 +2,12 @@
 
 {% block title %}Dashboard - My Web Application{% endblock %}
 
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="dashboard-container">
     <div class="dashboard-box">
@@ -9,6 +15,7 @@
             <h2>Welcome, {{ user.full_name }}!</h2>
             <p>This is your dashboard.</p>
         </div>
+        <a href="{% url 'logout' %}">Logout</a>
     </div>
 </div>
 {% endblock %}
