--- a/application/templates/website/login.html
+++ b/application/templates/website/login.html
@@ -2,6 +2,12 @@
 
 {% block title %}Login - My Web Application{% endblock %}
 
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="box">
@@ -23,6 +29,7 @@
                     <button type="submit">Login</button>
                 </div>
             </form>
+            <p> <a href="{% url 'register' %}"> Create Account</a></p>
         </div>
     </div>
 </div>
