--- a/application/templates/website/login.html
+++ b/application/templates/website/login.html
@@ -29,7 +29,7 @@
                     <button type="submit">Login</button>
                 </div>
             </form>
-            <p> <a href="{% url 'register' %}"> Create Account</a></p>
+            <p style="text-align: center;"> <a href="{% url 'register' %}"> Create Account</a></p>
         </div>
     </div>
 </div>
