--- a/application/templates/website/register.html
+++ b/application/templates/website/register.html
@@ -24,7 +24,7 @@
                     <button type="submit">Register</button>
                 </div>
             </form> 
-            <p> Already Registered? Click <a href="{% url 'login' %}">here</a> to Login</p>
+            <p style="text-align: center;"> Already Registered? Click <a href="{% url 'login' %}">here</a> to Login</p>
         </div>
     </div>
 </div>
