--- a/application/templates/website/admin.html
+++ b/application/templates/website/admin.html
@@ -17,8 +17,9 @@
                 <th>ID</th>
                 <th>Full Name</th>
                 <th>Email</th>
-                <th>Phone</th>
-                <th>Profile Photo</th>
+                <th>Admin</th>
+                <th>Account Deactivated</th>
+                <th>More Details</th>
             </tr>
         </thead>
         <tbody>
@@ -27,18 +28,32 @@
                     <td>{{ user.id }}</td>
                     <td>{{ user.full_name }}</td>
                     <td>{{ user.email }}</td>
-                    <td>{{ user.phone }}</td>
-                    <td>
-                        {% if user.profile_photo %}
-                            With Photo
-                        {% else %}
-                            No Photo
-                        {% endif %}
-                    </td>
+                    <td>{{ user.is_admin }}</td>
+                    <td>{{ user.is_banned }}</td>
+                    <td><a href="{% url 'user_details' user.id %}">Click here</a></td>
                 </tr>
             {% endfor %}
         </tbody>
-    </table>
+    </table> 
+    {% comment %} <h3>Users</h3>
+    <ul>
+        {% for user in users %}
+            <li>{{ user.email }} ({{ user.full_name }}) - Admin: {{ user.is_admin }}</li>
+        {% endfor %}
+    </ul> {% endcomment %}
+    <h3>Posts</h3>
+    <ul>
+        {% for post in posts %}
+            <li>{{ post.title }} by {{ post.user.email }}
+                <form method="post" action="{% url 'delete_post' post.id %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit">Delete</button>
+                </form>
+            </li>
+        {% endfor %}
+    </ul>
+    {% comment %} <a href="{% url 'manage_users' %}">Manage Users</a> {% endcomment %}
+    <a href="{% url 'view_all_posts' %}">View All Posts</a>
     <button><a href="{% url 'logout' %}">Logout</a></button>
 </div>
 {% endblock %}
