--- a/application/templates/website/dashboard.html
+++ b/application/templates/website/dashboard.html
@@ -1,23 +1,65 @@
 {% extends 'base.html' %}
 
-{% block title %}Dashboard - My Web Application{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% load static %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/userdashboard.css' %}">
 {% endblock %}
 
 {% block content %}
 <div class="dashboard-container">
-    <div class="dashboard-box">
+    <div class="sidebar">
+        <div class="sidebar-content">
+            {% if user.profile_photo %}
+                <img src="{{ user.profile_photo.url }}" alt="{{ user.full_name }}'s Profile Picture">
+                {% else %}
+                    <img src="{% static 'profile_photos/default_profile.png' %}" alt="Default Profile Picture">
+                {% endif %}
+            <h2>{{ user.full_name }}</h2>
+            <ul>
+                <li><a href="{% url 'dashboard' %}">Home</a></li>
+                <li><a href="{% url 'new_post' %}">Create New Post</a></li>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-content">
         <div class="content-header">
             <h2>Welcome, {{ user.full_name }}!</h2>
         </div>
-        <div class="form-group">
-            <p>This is your dashboard.</p>
-        <div>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+        <div class="filter-form">
+        <form method="get">
+            {{ filter_form.as_p }}
+            <button type="submit">Filter</button>
+        </form>
+        </div>
+        <div class="search-form">
+            <form method="get">
+                {{ search_form.as_p }}
+                <button type="submit">Search</button>
+            </form>
+        </div>
+    
+        <div class="recent-posts">
+            {% if query %}
+                <h3>Search results for "{{ query }}"</h3>
+            {% else %}
+            <h2>Recent Posts</h2>
+            {% endif %}
+            <ul>
+                {% for post in posts %}
+                    <li>
+                        <a href="{% url 'post_detail' post.id %}">{{ post.title }}</a>
+                        <p>by {{ post.author.username }}</p>
+                    </li>
+                {% empty %}
+                    <li>No posts found.</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </div>
 {% endblock %}
