--- a/application/templates/website/login.html
+++ b/application/templates/website/login.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+{% for message in messages %}
+    <div class="message {{ message.tags }}">
+        {{ message }}
+    </div>
+{% endfor %}
 <div class="container">
     <div class="box">
         <div class="form">
