--- a/application/templates/website/admin.html
+++ b/application/templates/website/admin.html
@@ -18,7 +18,7 @@
                 <th>Full Name</th>
                 <th>Email</th>
                 <th>Admin</th>
-                <th>Account Deactivated</th>
+                <th>Account Banned</th>
                 <th>More Details</th>
             </tr>
         </thead>
