--- a/application/templates/website/post_detail.html
+++ b/application/templates/website/post_detail.html
@@ -8,9 +8,10 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="container">
     <h2>{{ post.title }}</h2>
-    <p>{{ post.content }}</p>
+    <p>Content: {{ post.content }}</p>
     <p>By {{ post.author.username }} on {{ post.created_at }}</p>
     
     <p class="likes">Total Likes: {{ post.total_likes }}</p>
