--- a/application/templates/website/view_all_posts.html
+++ b/application/templates/website/view_all_posts.html
@@ -1,45 +1,60 @@
 {% extends 'base.html' %}
 
 {% block title %}View All Posts{% endblock %}
-{% block content %}
 
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/view_all_posts.css' %}">
+{% endblock %}
+
+{% block content %}
+<h1>Manage Posts</h1>
+<div class="container">
+    <div class="pending">
+        <h2>Pending Posts</h2>
+        <ul>
+            {% for post in posts %}
+                {% if not post.is_approved %}
+                    <li>
+                        <h4><strong>{{ post.title }}</strong></h4>
+                        <p><i>Posted by: {{ post.author }}</i><br></p>
+                        <p><strong>Content: </strong>{{ post.content }}</p>
+                        <div class="button-group">
+                            <form method="post" action="{% url 'manage_post' post.id 'approve' %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit">Approve</button>
+                            </form>
+                            <form method="post" action="{% url 'manage_post' post.id 'delete' %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit">Delete</button>
+                            </form>
+                        </div>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+    <hr>
+    <div class="all">
+        <h2>All Posts</h2>
+        <ul>
+            {% for post in posts %}
+                {% if post.is_approved %}
+                    <li>
+                        <h4><strong>{{ post.title }}</strong></h4>
+                        <p><i>Posted by: {{ post.author }}</i><br></p>
+                        <p><strong>Content: </strong>{{ post.content }}</p>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 <nav>
     <ul>
         <li><a href="{% url 'admin_page' %}">Admin Page</a></li>
     </ul>
 </nav>
-
-<div class="container">
-    <h2>Pending Posts</h2>
-    <ul>
-        {% for post in posts %}
-            {% if not post.is_approved %}
-                <li>
-                    {{ post.title }} by {{ post.author }}
-                    Content: {{ post.content }}
-                    <form method="post" action="{% url 'manage_post' post.id 'approve' %}" style="display:inline;">
-                        {% csrf_token %}
-                        <button type="submit">Approve</button>
-                    </form>
-                    <form method="post" action="{% url 'manage_post' post.id 'delete' %}" style="display:inline;">
-                        {% csrf_token %}
-                        <button type="submit">Delete</button>
-                    </form>
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-
-    <h2>All Posts</h2>
-    <ul>
-        {% for post in posts %}
-            {% if post.is_approved %}
-                <li>{{ post.title }} by {{ post.author }}
-                    Content: {{ post.content }}
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-</div>
 {% endblock %}
 {{ redirect_to_login_immediately }}
