--- a/application/static/css/edit_post.css
+++ b/application/static/css/edit_post.css
@@ -46,7 +46,7 @@ a:hover {
 }
 
 button {
-    background-color: #4d8ce4;
+    background-color: #28a745;
     color: #fff;
     border: none;
     padding: 10px 15px;
@@ -56,7 +56,7 @@ button {
 }
 
 button:hover {
-    background-color: #335fcc;
+    background-color: #218838;
 }
 
 form {
