--- a/application/templates/website/edit_post.html
+++ b/application/templates/website/edit_post.html
@@ -1,13 +1,22 @@
 {% extends 'base.html' %}
 
 {% block title %}Edit Post{% endblock %}
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/edit_post.css' %}">
+{% endblock %}
 
 {% block content %}
-    <h2>Edit Post</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save Changes</button>
-    </form>
+<h1>Edit Post</h1>
+<div class="container">
+    <div class="post-content">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Save Changes</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
 {{ redirect_to_login_immediately }}
