--- a/application/templates/website/post_detail.html
+++ b/application/templates/website/post_detail.html
@@ -9,35 +9,40 @@
 
 {% block content %}
 
+<h1>Post Details</h1>
 <div class="container">
-    <h2>{{ post.title }}</h2>
-    <p>Content: {{ post.content }}</p>
-    <p>By {{ post.author.username }} on {{ post.created_at }}</p>
-    
-    <p class="likes">Total Likes: {{ post.total_likes }}</p>
-    {% if is_liked %}
-        <a href="{% url 'like_post' post.id %}">Unlike</a>
-    {% else %}
-        <a href="{% url 'like_post' post.id %}">Like</a>
-    {% endif %}
+    <div class="post-content">
+        <h2>{{ post.title }}</h2>
+        <p><i>Posted by: {{ post.author.username }}</i></p>
+        <p><strong>Content: </strong>{{ post.content }}</p>
+        <p><strong>Date Posted: </strong>{{ post.created_at }}</p>
+        
+        <p class="likes">Total Likes: {{ post.total_likes }}</p>
+        {% if is_liked %}
+            <a href="{% url 'like_post' post.id %}">Unlike</a>
+        {% else %}
+            <a href="{% url 'like_post' post.id %}">Like</a>
+        {% endif %}
 
-    <h3>Comments</h3>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Add Comment</button>
-    </form>
-    
-    {% for comment in comments %}
-        <div class="comment">
-            <p class="comment-author">{{ comment.user.username }} commented:</p>
-            <p>{{ comment.content }}</p>
-            <p class="comment-date">On {{ comment.created_at }}</p>
-        </div>
-    {% endfor %}
-
-    {% if user.is_authenticated and user == post.author %}
-        <a href="{% url 'edit_post' post.id %}" class="edit-post">Edit Post</a>
-    {% endif %}
+        <h3>Comments</h3>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Add Comment</button>
+        </form>
+        
+        {% for comment in comments %}
+            <div class="comment">
+                <p class="comment-author">{{ comment.user.username }} commented:</p>
+                <p>{{ comment.content }}</p>
+                <p class="comment-date">On {{ comment.created_at }}</p>
+            </div>
+        {% endfor %}
+        
+        <hr>
+        {% if user.is_authenticated and user == post.author %}
+            <a href="{% url 'edit_post' post.id %}" class="edit-post">Edit Post</a>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
