-Added a dashboard button for edit_post and post_detail. -Removed messages from being displayed in login. -Added cache control for other webpages.

--- a/application/templates/website/edit_post.html
+++ b/application/templates/website/edit_post.html
@@ -8,6 +8,11 @@
 {% endblock %}
 
 {% block content %}
+<nav>
+    <ul>
+        <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+    </ul>
+</nav>
 <h1>Edit Post</h1>
 <div class="container">
     <div class="post-content">
