--- a/application/templates/website/post_detail.html
+++ b/application/templates/website/post_detail.html
@@ -10,6 +10,11 @@
 {% block content %}
 
 <h1>Post Details</h1>
+<nav>
+    <ul>
+        <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+    </ul>
+</nav>
 <div class="container">
     <div class="post-content">
         <h2>{{ post.title }}</h2>
