--- a/application/static/css/edit_post.css
+++ b/application/static/css/edit_post.css
@@ -17,14 +17,13 @@ body {
 
 .post-content {
     padding: 20px;
-    margin: 10px;
 }
 
 h1 {
     text-align: center;
     color: #333;
     margin-bottom: 20px;
-    margin-top: 60px;
+    margin-top: 20px;
 }
 
 h2 {
@@ -46,7 +45,7 @@ a:hover {
 }
 
 button {
-    background-color: #28a745;
+    background-color: #4d8ce4;
     color: #fff;
     border: none;
     padding: 10px 15px;
@@ -56,7 +55,7 @@ button {
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #335fcc;
 }
 
 form {
@@ -118,4 +117,30 @@ textarea {
 h3 {
     border-bottom: 2px solid #28a745;
     padding-bottom: 5px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #218838;
+}
+  
+li {
+    float: left;
+}
+  
+li a {
+    display: block;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+  
+li a:hover {
+    background-color: #28a745;
 }
