--- a/application/templates/website/edit_post.html
+++ b/application/templates/website/edit_post.html
@@ -8,13 +8,13 @@
 {% endblock %}
 
 {% block content %}
-<nav>
-    <ul>
-        <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
-    </ul>
-</nav>
 <h1>Edit Post</h1>
 <div class="container">
+    <ul>
+        <li><a href="{% url 'dashboard' %}" class="home">Dashboard </a></li>
+        <li><a href="{% url 'new_post' %}">New Post </a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+    </ul>
     <div class="post-content">
         <form method="post">
             {% csrf_token %}
