--- a/application/templates/website/post_detail.html
+++ b/application/templates/website/post_detail.html
@@ -10,13 +10,14 @@
 {% block content %}
 
 <h1>Post Details</h1>
-<nav>
-    <ul>
-        <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
-    </ul>
-</nav>
 <div class="container">
+    <ul>
+        <li><a href="{% url 'dashboard' %}" class="home">Dashboard </a></li>
+        <li><a href="{% url 'new_post' %}">New Post </a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+    </ul>
     <div class="post-content">
+        <hr>
         <h2>{{ post.title }}</h2>
         <p><i>Posted by: {{ post.author.username }}</i></p>
         <p><strong>Content: </strong>{{ post.content }}</p>
