--- a/application/templates/website/admin.html
+++ b/application/templates/website/admin.html
@@ -14,7 +14,6 @@
     <table>
         <thead>
             <tr>    
-                <th>ID</th>
                 <th>Full Name</th>
                 <th>Email</th>
                 <th>Admin</th>
@@ -24,14 +23,15 @@
         </thead>
         <tbody>
             {% for user in users %}
-                <tr>
-                    <td>{{ user.id }}</td>
-                    <td>{{ user.full_name }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.is_admin }}</td>
-                    <td>{{ user.is_banned }}</td>
-                    <td><a href="{% url 'user_details' user.id %}">Click here</a></td>
-                </tr>
+                {% if user.is_active %} 
+                    <tr>
+                        <td>{{ user.full_name }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>{{ user.is_admin }}</td>
+                        <td>{{ user.is_banned }}</td>
+                        <td><a href="{% url 'user_details' user.id %}">Click here</a></td>
+                    </tr>
+                {% endif %}
             {% endfor %}
         </tbody>
     </table> 
