--- a/application/templates/website/admin.html
+++ b/application/templates/website/admin.html
@@ -14,6 +14,7 @@
     <table>
         <thead>
             <tr>    
+                <th>Last Login</th>
                 <th>Full Name</th>
                 <th>Email</th>
                 <th>Admin</th>
@@ -25,6 +26,7 @@
             {% for user in users %}
                 {% if user.is_active %} 
                     <tr>
+                        <td>{{ user.last_login }}</td>
                         <td>{{ user.full_name }}</td>
                         <td>{{ user.email }}</td>
                         <td>{{ user.is_admin }}</td>
